# fickle-mode

./: .gitignore  justfile  pyproject.toml
fickle_mode/: datasets.py  model.py  train.py
